# voice-agent-poc

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/level-a/booking/: booking-result.json  checksums.sha256  run-metadata.json  session.jsonl  transcript.md
artifacts/level-a/correction/: booking-result.json  checksums.sha256  run-metadata.json  session.jsonl  transcript.md
artifacts/level-a/routing/: checksums.sha256  run-metadata.json  session.jsonl  transcript.md
artifacts/level-b/: checksums.sha256  run-metadata.json  session.jsonl  transcript.md
data/: appointments.example.json  calendar.example.json
providers/livekit/: .env.example  README.md  agent.py
providers/retell/: README.md  agent.json  deploy.py  response-engine.json
providers/vapi/: README.md  assistant.json  deploy.py
scripts/: evidence.py  run_text_demo.py  run_voice_demo.py  verify_artifacts.py
src/voice_agent/: __init__.py  agent.py  cli.py  datetimeparse.py  dialog.py  intents.py  logging.py  schemas.py  settings.py  state.py  storage.py  tools.py
src/voice_agent/providers/: __init__.py  deterministic.py  local_stt.py  local_tts.py  openai_compatible.py
tests/: conftest.py  test_datetimeparse.py  test_dialog.py  test_nlu_schema.py  test_provider_configs.py  test_tools_storage.py
